--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "sucrase": "^3.34.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mariadb": "^3.2.0",
     "sequelize": "^6.32.1"
   }
