--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -24,6 +25,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mariadb": "^3.2.0",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.32.1"
   }
 }
